--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
-<h1> esta es mi primera pagina con GitHub Pages </h1>
+<h1>Esta es mi primera pagina con GitHub Pages</h1>
 <p>¡Gracias GitHub!</p>
 </html>
